# NKU-CppCourceWork

./: .gitignore  AGENT.md  AGENTS.md  CMakeLists.txt  Material.h  PROJECT_SPEC.md  README.md  Renderer.cpp  Scene.cpp  TinyRayStudio.tar  USER_GUIDE.md  VALIDATION_PLAN.md  VALIDATION_REPORT.md  Vec3.h
src/: main.cpp
src/core/: BloomSettings.h  Box.cpp  Box.h  Camera.h  Cylinder.cpp  Cylinder.h  Environment.h  HitRecord.h  ImagePostProcess.h  Light.h  Material.h  MathUtils.h  Object.h  OrbitCamera.cpp  OrbitCamera.h  Plane.cpp  Plane.h  Random.h  Ray.h  RayTracer.cpp  RayTracer.h  RenderSettings.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneIO.cpp  SceneIO.h  Sphere.cpp  Sphere.h  Texture.h  Vec3.h
src/gui/: GLPreviewWidget.cpp  GLPreviewWidget.h  MainWindow.cpp  MainWindow.h  RealTimeRenderWidget.cpp  RealTimeRenderWidget.h  RenderWidget.cpp  RenderWidget.h  ScenePanel.cpp  ScenePanel.h  ScenePanelEmissive.cpp  ScenePanelSelection.cpp
src/interaction/: DragMode.h  OverlayProjector.h  Picking.cpp  Picking.h
src/particle/: Emitter.cpp  Emitter.h  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h
src/preview/: BloomPass.cpp  BloomPass.h  SkyboxRenderer.h
